<resources>
    <string name="app_name">AnimeApp</string>
    <string name="logo">Logo</string>
    <string name="novos_epis_dios_de_boku_no_hero_academia">Novos episódios de Boku no Hero Academia</string>
    <string name="noticia">Noticia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="p_gina_inicial">Página Inicial</string>
    <string name="conta">Conta</string>
    <string name="animes">Animes</string>
    <string name="lista_de_animes">Lista de Animes</string>
    <string name="favoritos">Favoritos</string>
    <string name="hist_rico">Histórico</string>
    <string name="outros">Outros</string>
    <string name="configura_es">Configurações</string>
    <string name="compartilhe">Compartilhe</string>
    <string name="imagem">Imagem</string>
    <string name="fa_a_o_login">Faça o Login</string>
    <string name="ltimas_noticias_sobre_the_promised_neverland">Últimas noticias sobre The Promised Neverland</string>
    <string name="entrar">Entrar</string>
    <string name="registre_se">Registre-se</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="foto_do_usu_rio">foto do usuário</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrar">Registrar</string>
    <string name="registro_usuario">Registro de usuário</string>
    <string name="registro">Registro</string>
    <string name="registro_de_usu_rio">Registro de usuário</string>
    <string name="share">Compartilhe o app</string>
    <string name="boku_no_hero_academia">Boku no Hero Academia</string>
    <string name="description_bokunohero">Em um mundo onde 80% da população possui algum tipo de habilidade especial, ser um herói é um sonho ambicioso que muitos compartilham. Porém, esse sonho é ainda mais difícil para Izuku, um garoto que quer se tornar o herói número 1 igual seu ídolo, All might, mas que teve o azar de nascer sem qualquer poder. Porém, isso não vai impedi-lo de se matricular em uma das academias de heróis mais prestigiadas do mundo.</string>
    <string name="epis_dios">Episódios:</string>
    <string name="temporada_1_13_epis_dios">Temporada 1: 13 episódios</string>
    <string name="temporada_2_25_epis_dios">Temporada 2: 25 episódios</string>
    <string name="temporada_3_25_epis_dios">Temporada 3: 25 episódios</string>
    <string name="temporada_4_25_epis_dios">Temporada 4: 25 episódios</string>
    <string name="temporada_5_12_epis_dios">Temporada 5: 12 episódios</string>
    <string name="clique_aqui_para_assistir">Clique aqui para assistir</string>
    <string name="the_promised_neverland">The Promised Neverland</string>
    <string name="description_neverland">Ray, Norman e Emma são as crianças mais velhas e inteligentes de um orfanato, cuidados por Mama Isabela, mas um dia, após uma garota do orfanato ser adotada, os pequenos gênios descobrem que o orfanato onde eles vivem não é nada do que pensavam. Agora os três precisarão formar um plano de fuga, para salvar suas vidas e a de seus amigos.</string>
    <string name="temporada_1_12_epis_dios">Temporada 1: 12 episódios</string>
    <string name="temporada_2_11_epis_dios">Temporada 2: 11 episódios</string>
    <string name="demon_slayer">Demon Slayer</string>
    <string name="description_ds">O jovem Tanjiro ao retornar para casa depois de um dia de trabalho se deparou com sua família brutalmente assassinada por um demônio, encontrando apenas sua irmã, mas infelizmente, essa havia sido transformada em uma criatura demoníaca no ataque. Agora o jovem irá lutar para vingar a morte de sua família e salvar sua irmã, junto da ajuda de pessoas que o mesmo encontrará no caminho.</string>
    <string name="temporada_1_26_epis_dios">Temporada 1: 26 episódios</string>
    <string name="one_piece">One Piece</string>
    <string name="description_onepiece">A história conta sobre o jovem Monkey D. Luffy, que se inspira em seu ídolo de infância, um pirata muito poderoso nomeado “o Ruivo”, e saí em uma jornada no mar East Blue para encontrar um famoso tesouro, o “One piece”, e se proclamar o rei dos piratas.</string>
    <string name="temporada_1_saga_east_blue_61_epis_dios">Temporada 1 - Saga East Blue: 61 episódios</string>
    <string name="temporada_2_saga_alabasta_74_epis_dios">Temporada 2 - Saga Alabasta: 74 episódios</string>
    <string name="temporada_3_saga_skypiea_71_epis_dios">Temporada 3 - Saga Skypiea: 71 episódios</string>
    <string name="temporada_4_saga_walter_7_119_epis_dios">Temporada 4 – Saga Walter 7: 119 episódios</string>
    <string name="temporada_5_saga_thriller_bark_59_epis_dios">Temporada 5 – Saga Thriller Bark: 59 episódios</string>
    <string name="temporada_6_saga_guerra_de_marineford_132_epis_dios">Temporada 6 – Saga guerra de marineford: 132 episódios</string>
    <string name="temporada_7_saga_ilha_dos_homens_peixe_58_epis_dios">Temporada 7 – Saga ilha dos homens-peixe: 58 episódios</string>
    <string name="temporada_8_saga_alian_a_pirata_176_epis_dios">Temporada 8 – Saga aliança pirata: 176 episódios</string>
    <string name="temporada_9_saga_yonkou_227_epis_dios_at_agora">Temporada 9 – Saga Yonkou: 227 episódios (até agora)</string>
    <string name="localiza">Localização</string>
    <string name="lembrar">lembrar</string>
    <string name="ou">ou</string>
</resources>