<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fa_a_o_login"
        android:textSize="30sp"
        android:textColor="@color/background"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:ems="10"
        android:maxLength="70"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:padding="10dp"
        android:background="@color/white"
        android:hint="@string/e_mail"/>

    <EditText
        android:id="@+id/senha"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:ems="10"
        android:maxLength="20"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:padding="10dp"
        android:background="@color/white"
        android:hint="@string/senha"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:id="@+id/botao_enviar"
        android:text="@string/entrar"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registre_se"
        android:id="@+id/registre"
        android:textSize="24sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp"
        android:clickable="true"/>
</RelativeLayout>