<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:id="@+id/activityMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background"
            android:textColor="@color/text"
            android:elevation="4dp"
            tools:targetApi="lollipop">

        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/background"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/bnh_home"
                    android:layout_width="350dp"
                    android:layout_height="210dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contentDescription="@string/animes"
                    android:src="@drawable/imagem_bokunohero" />

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/novos_epis_dios_de_boku_no_hero_academia"
                    android:textAllCaps="true"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/tpn_home"
                    android:layout_width="350dp"
                    android:layout_height="175dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:contentDescription="@string/animes"
                    android:src="@drawable/imagem_neverland" />

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/ltimas_noticias_sobre_the_promised_neverland"
                    android:textAllCaps="true"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>